--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coinpayments": "^2.1.3",
+    "killerbees": "^1.1.0",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
